--- a/index.html
+++ b/index.html
@@ -861,30 +861,24 @@
 <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
 <script>
     const swiper = new Swiper('.swiper-container', {
-        slidesPerView: 5,
-        spaceBetween: 10,
-        loop: true,
-        autoplay: {
-            delay: 2000,
-            disableOnInteraction: false,
-        },
-        navigation: {
-            nextEl: '.swiper-button-next',
-            prevEl: '.swiper-button-prev',
-        },
-        pagination: {
-            el: '.swiper-pagination',
-            clickable: true,
-        },
-        breakpoints: {
-            768: {
-                slidesPerView: 3,
-            },
-            480: {
-                slidesPerView: 2,
-            },
-        },
-    });
+    slidesPerView: 3, // Number of slides visible at a time
+    spaceBetween: 20, // Adjust spacing between slides
+    loop: true, // Infinite looping
+    autoplay: {
+        delay: 3000, // Auto-slide every 3 seconds
+        disableOnInteraction: false, // Continue autoplay even after interaction
+    },
+    navigation: {
+        nextEl: '.swiper-button-next',
+        prevEl: '.swiper-button-prev',
+    },
+    pagination: {
+        el: '.swiper-pagination',
+        clickable: true, // Makes pagination bullets clickable
+    },
+});
+
+
 </script>
 
 </body>
