--- a/index.html
+++ b/index.html
@@ -67,14 +67,15 @@
                 <a href="about.html" class="nav-item nav-link">About Us</a>
                 <a href="contact.html" class="nav-item nav-link">Contact Us</a>
             </div>
-            <a href="https://wa.me/919663098906?text=Hi,%20I%20am%20interested%20in%20a%20free%20consultation." 
-               class="btn whatsapp-btn d-none d-lg-flex">
-               <i class="fab fa-whatsapp"></i>
+            <a href="https://wa.me/919663098906?text=Hi,%20I%20am%20interested%20in%20a%20free%20consultation."
+               class="btn whatsapp-btn d-flex align-items-center">
+               <i class="fab fa-whatsapp"></i> WhatsApp
             </a>
         </div>
     </nav>
 </div>
 <!-- Navbar End -->
+
 
 
 
