--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
     <!-- Include Font Awesome for the WhatsApp Icon -->
 <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 
+<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
+
+
 <!-- Include Swiper's CSS -->
 <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
     
@@ -50,7 +53,7 @@
 
 
  <!-- Navbar Start -->
-<div class="container-fluid nav-bar bg-transparent">
+ <div class="container-fluid nav-bar bg-transparent">
     <nav class="navbar navbar-expand-lg bg-white navbar-light py-0 px-4">
         <a href="index.html" class="navbar-brand d-flex align-items-center text-center">
             <div class="icon p-2 me-2">
@@ -68,8 +71,8 @@
                 <a href="contact.html" class="nav-item nav-link">Contact Us</a>
             </div>
             <a href="https://wa.me/919663098906?text=Hi,%20I%20am%20interested%20in%20a%20free%20consultation."
-               class="btn whatsapp-btn d-flex align-items-center">
-               <i class="fab fa-whatsapp"></i> WhatsApp
+               class="btn whatsapp-btn d-flex align-items-center justify-content-center">
+               <i class="fab fa-whatsapp me-2"></i> WhatsApp
             </a>
         </div>
     </nav>
@@ -881,6 +884,8 @@
 
 
 </script>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 
 </body>
 
