--- a/index.html
+++ b/index.html
@@ -30,10 +30,7 @@
     <!-- Template Stylesheet -->
     <link href="css/style.css" rel="stylesheet">
 
-    <!-- Include Font Awesome for the WhatsApp Icon -->
-<script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 
-<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
 
 
 <!-- Include Swiper's CSS -->
@@ -53,11 +50,11 @@
 
 
  <!-- Navbar Start -->
- <div class="container-fluid nav-bar bg-transparent">
+<div class="container-fluid nav-bar bg-transparent">
     <nav class="navbar navbar-expand-lg bg-white navbar-light py-0 px-4">
         <a href="index.html" class="navbar-brand d-flex align-items-center text-center">
             <div class="icon p-2 me-2">
-                <img class="img-fluid" src="img/icon-deal.png" alt="Icon" style="width: 50px; height: 50px;">
+                <img class="img-fluid" src="img/icon-deal.png" alt="Icon" style="width: 30px; height: 30px;">
             </div>
             <h1 class="m-0 text-primary">HomeAdvise</h1>
         </a>
@@ -70,14 +67,15 @@
                 <a href="about.html" class="nav-item nav-link">About Us</a>
                 <a href="contact.html" class="nav-item nav-link">Contact Us</a>
             </div>
-            <a href="https://wa.me/919663098906?text=Hi,%20I%20am%20interested%20in%20a%20free%20consultation."
-               class="btn whatsapp-btn d-flex align-items-center justify-content-center">
-               <i class="fab fa-whatsapp me-2"></i> WhatsApp
+            <a href="https://wa.me/919663098906?text=Hi,%20I%20am%20interested%20in%20a%20free%20consultation." 
+               class="btn whatsapp-btn d-none d-lg-flex">
+               <i class="fab fa-whatsapp"></i>
             </a>
         </div>
     </nav>
 </div>
 <!-- Navbar End -->
+
 
 
 
@@ -885,7 +883,8 @@
 
 </script>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- Include Font Awesome for the WhatsApp Icon -->
+    <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 
 </body>
 
