--- a/index.html
+++ b/index.html
@@ -700,9 +700,9 @@
                     <div class="swiper-slide"><img src="img/5.png" alt="Partner 5"></div>
                     <div class="swiper-slide"><img src="img/6.png" alt="Partner 6"></div>
                 </div>
-                <!-- Navigation Buttons -->
+                <!-- Navigation Buttons
                 <div class="swiper-button-next"></div>
-                <div class="swiper-button-prev"></div>
+                <div class="swiper-button-prev"></div> -->
                 <!-- Pagination -->
                 <div class="swiper-pagination"></div>
             </div>
