--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <nav class="navbar navbar-expand-lg bg-white navbar-light py-0 px-4">
         <a href="index.html" class="navbar-brand d-flex align-items-center text-center">
             <div class="icon p-2 me-2">
-                <img class="img-fluid" src="img/icon-deal.jpg" alt="Icon" style="width: 100px; height: 60px;">
+                <img class="img-fluid" src="img/icon-deal.png" alt="Icon" style="width: 100px; height: 60px;">
             </div>
             <!-- <h1 class="m-0 text-primary">HomeAdvise</h1> -->
         </a>
