--- a/index.html
+++ b/index.html
@@ -47,37 +47,31 @@
             </div>
         </div>
         <!-- Spinner End -->
+         
 
-
- <!<!-- Navbar Start -->
- <div class="container-fluid nav-bar bg-transparent">
-     <nav class="navbar navbar-expand-lg bg-white navbar-light py-0 px-4">
-         <a href="index.html" class="navbar-brand d-flex align-items-center text-center">
-             <div class="icon p-2 me-2">
-                 <img class="img-fluid logo-img" src="img/icon-deal.png" alt="Icon">
-             </div>
-             <!-- <h1 class="m-0 text-primary">HomeAdvise</h1> -->
-         </a>
-         <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
-             <span class="navbar-toggler-icon"></span>
-         </button>
-         <div class="collapse navbar-collapse" id="navbarCollapse">
-             <div class="navbar-nav ms-auto">
-                 <a href="index.html" class="nav-item nav-link active">Home</a>
-                 <a href="about.html" class="nav-item nav-link">About Us</a>
-                 <a href="contact.html" class="nav-item nav-link">Contact Us</a>
-             </div>
-             <a href="https://wa.me/919663098906?text=Hi,%20I%20am%20interested%20in%20a%20free%20consultation." 
-                class="btn whatsapp-btn d-none d-lg-flex">
-                <i class="fab fa-whatsapp"></i>
-             </a>
-         </div>
-     </nav>
- </div>
- <!-- Navbar End -->
-
-
-
+        <!-- Navbar Start -->
+<div class="container-fluid nav-bar">
+    <nav class="navbar navbar-expand-lg navbar-light py-0 px-4">
+        <a href="index.html" class="navbar-brand d-flex align-items-center">
+            <img class="logo-img" src="img/icon-deal.png" alt="HomeAdvise Logo">
+        </a>
+        <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarCollapse">
+            <div class="navbar-nav ms-auto">
+                <a href="index.html" class="nav-item nav-link active">Home</a>
+                <a href="about.html" class="nav-item nav-link">About Us</a>
+                <a href="contact.html" class="nav-item nav-link">Contact Us</a>
+            </div>
+            <a href="https://wa.me/919663098906?text=Hi,%20I%20am%20interested%20in%20a%20free%20consultation." 
+               class="btn whatsapp-btn d-none d-lg-flex">
+               <i class="fab fa-whatsapp"></i>
+            </a>
+        </div>
+    </nav>
+</div>
+<!-- Navbar End -->
 
 
        <!-- Header Start -->
