--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             </div>
         </div>
         <!-- Spinner End -->
-         
+
 
         <!-- Navbar Start -->
 <div class="container-fluid nav-bar">
@@ -715,7 +715,7 @@
                         <div class="bg-white border rounded p-4">
                             <p>Home advise’s in-depth knowledge and personalized guidance made the home-buying process smooth and stress-free.</p>
                             <div class="d-flex align-items-center">
-                                <img class="img-fluid flex-shrink-0 rounded" src="img/testimonial-1.jpg" style="width: 45px; height: 45px;">
+                                <!-- <img class="img-fluid flex-shrink-0 rounded" src="img/testimonial-1.jpg" style="width: 45px; height: 45px;"> -->
                                 <div class="ps-3">
                                     <h6 class="fw-bold mb-1">Manish P, Bangalore</h6>
                                     <small>Software Engineer</small>
@@ -727,7 +727,7 @@
                         <div class="bg-white border rounded p-4">
                             <p>Choosing Home advise was the best decision we made. Their attention to detail and clear communication helped us find the perfect home effortlessly.</p>
                             <div class="d-flex align-items-center">
-                                <img class="img-fluid flex-shrink-0 rounded" src="img/testimonial-2.jpg" style="width: 45px; height: 45px;">
+                                <!-- <img class="img-fluid flex-shrink-0 rounded" src="img/testimonial-2.jpg" style="width: 45px; height: 45px;"> -->
                                 <div class="ps-3">
                                     <h6 class="fw-bold mb-1">Sneha R, Bangalore</h6>
                                     <small>Doctor</small>
@@ -739,7 +739,7 @@
                         <div class="bg-white border rounded p-4">
                             <p>Home advise’s professional advice and expertise made finding our dream home a hassle-free experience.</p>
                             <div class="d-flex align-items-center">
-                                <img class="img-fluid flex-shrink-0 rounded" src="img/testimonial-3.jpg" style="width: 45px; height: 45px;">
+                                <!-- <img class="img-fluid flex-shrink-0 rounded" src="img/testimonial-3.jpg" style="width: 45px; height: 45px;"> -->
                                 <div class="ps-3">
                                     <h6 class="fw-bold mb-1">Sandeep T, Bangalore</h6>
                                     <small>Financial Analyst</small>
@@ -762,8 +762,7 @@
                         <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>Shop No. 3, Site No.15, 1st Cross, Akshaya Nagar, Yelehanahalli Village, Begur, Bangalore – 560068 </p>
                         <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+91 9663098906</p>
                         <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+91 8792532186</p>
-                        <p class="mb-2"><i class="fa fa-envelope me-3"></i>dadapeer@homeadvise.in</p>
-                        <p class="mb-2"><i class="fa fa-envelope me-3"></i>imrankhan@homeadvise.in</p>
+                        <p class="mb-2"><i class="fa fa-envelope me-3"></i>support@homeadvise.in</p>
 
                         <div class="d-flex pt-2">
                             <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-twitter"></i></a>
