--- a/contact.html
+++ b/contact.html
@@ -42,14 +42,12 @@
         <!-- Spinner End -->
 
 
- <!-- Navbar Start -->
- <div class="container-fluid nav-bar bg-transparent">
-    <nav class="navbar navbar-expand-lg bg-white navbar-light py-0 px-4">
-        <a href="index.html" class="navbar-brand d-flex align-items-center text-center">
-            <div class="icon p-2 me-2">
-                <img class="img-fluid" src="img/icon-deal.png" alt="Icon" style="width: 50px; height: 50px;">
-            </div>
-            <h1 class="m-0 text-primary">HomeAdvise</h1>
+ 
+        <!-- Navbar Start -->
+<div class="container-fluid nav-bar">
+    <nav class="navbar navbar-expand-lg navbar-light py-0 px-4">
+        <a href="index.html" class="navbar-brand d-flex align-items-center">
+            <img class="logo-img" src="img/icon-deal.png" alt="HomeAdvise Logo">
         </a>
         <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
@@ -68,6 +66,7 @@
     </nav>
 </div>
 <!-- Navbar End -->
+
 
         <!-- Header Start -->
         <div class="container-fluid header bg-white p-0">
@@ -154,8 +153,7 @@
                                             <i class="fa fa-envelope-open text-primary"></i>
                                         </div>
                                         <ul>
-                                        <span>dadapeer@homeadvise.in</span>
-                                        <span>imrankhan@homeadvise.in</span>
+                                        <span>support@homeadvise.in</span>
                                         </ul></div>
                                 </div>
                             </div>
@@ -224,8 +222,7 @@
                         <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>Shop No. 3, Site No.15, 1st Cross, Akshaya Nagar, Yelehanahalli Village, Begur, Bangalore – 560068</p>
                         <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+91 9663098906</p>
                         <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+91 8792532186</p>
-                        <p class="mb-2"><i class="fa fa-envelope me-3"></i>dadapeer@homeadvise.in</p>
-                        <p class="mb-2"><i class="fa fa-envelope me-3"></i>imrankhan@homeadvise.in</p>
+                        <p class="mb-2"><i class="fa fa-envelope me-3"></i>support@homeadvise.in</p>
                         <div class="d-flex pt-2">
                             <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-twitter"></i></a>
                             <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-facebook-f"></i></a>
