--- a/about.html
+++ b/about.html
@@ -190,7 +190,7 @@
                 <div class="row g-5">
                     <div class="col-lg-3 col-md-6">
                         <h5 class="text-white mb-4">Get In Touch</h5>
-                        <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>Shop No. 3, Site No.15, 1st Cross, Akshaya Nagar, Yelehanahalli Village, Begur, Bangalore – 560068 </p>
+                        <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>No. 3, Site No.15, 1st Cross, Akshaya Nagar, Yelehanahalli Village, Begur, Bangalore – 560068 </p>
                         <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+91 9663098906</p>
                         <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+91 8792532186</p>
                         <p class="mb-2"><i class="fa fa-envelope me-3"></i>support@homeadvise.in</p>
