--- a/contact.html
+++ b/contact.html
@@ -142,7 +142,7 @@
                                         <div class="icon me-3" style="width: 45px; height: 45px;">
                                             <i class="fa fa-map-marker-alt text-primary"></i>
                                         </div>
-                                        <span>Shop No. 3, Site No.15, 1st Cross, Akshaya Nagar, Yelehanahalli Village, Begur, Bangalore – 560068</span>
+                                        <span>No. 3, Site No.15, 1st Cross, Akshaya Nagar, Yelehanahalli Village, Begur, Bangalore – 560068</span>
                                     </div>
                                 </div>
                             </div>
